# RPGMaker2kPatcher

./: Cargo.toml  README.md  index.html  style.css
code/: canvas.js  class.js  database.js  general.js  preview.js  reader.js  scheduler.js  writer.js
notes/: Map0134 - commands.txt  Map0134 - events.txt  Map0134 - main.txt  Map0134 - pages.txt  Map0134.txt  Number System Brainstorming.txt  char limit.txt
src/: main.rs
src/dialogue/: core.rs  sample.toml
src/structs/: map.rs  mod.rs  patch.rs
src/types/: dynamic_integer.rs  events_wrapper.rs  mod.rs  null_terminated_list.rs  pascal_string.rs  u8_array.rs
src/wrappers/: map_event_headers.rs  map_events.rs  mod.rs
