[package]
name = "rpgmaker2kpatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.12.0"
crossterm = "0.27.0"
encoding = "0.2"
image = "0.24.7"
ratatui = "0.23.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.2"
